--- a/src/app/add-items/add-items.component.html
+++ b/src/app/add-items/add-items.component.html
@@ -1,1 +1,28 @@
-<p>add-items works!</p>
+<div class="container-fluid bg-light">
+  <div class="container bg-light">
+    <div class="row mt-4">
+      <div class="col"></div>
+      <div class="col-md-6 bg-white">
+        <div class="bg-warning shadow">
+          <h4 class="text-white">ToDo List</h4>
+        </div>
+        <div class="shadow">
+          <div class="row input-group p-4">
+            <div class="col-md-1"><input type="text" class="" placeholder="Enter task name"></div>
+            <div class="col-md-1"><input type="text" class="" placeholder="Enter task description"></div>
+              <div class="col-md-1"><select class="">
+              <option value="active">Active</option>
+              <option value="inactive">Inactive</option>
+              <option value="completed">Completed</option>
+              </select></div>
+            <div class="col-md-1"><input type="date" class="" placeholder="start date"></div>
+            <div class="col-md-1"><input type="date" class="" placeholder="end date"></div>
+            <div class="col-md-1"><button class="btn btn-success " type="button">+</button></div>
+          </div>
+        </div>
+
+      </div>
+      <div class="col"></div>
+    </div>
+  </div>
+</div>
