--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-add-items/>
-<app-list-items/>
+<div class="container-fluid"><app-add-items/></div>
+<div class="container-fluid"><app-list-items/></div>
