--- a/src/app/list-items/list-items.component.html
+++ b/src/app/list-items/list-items.component.html
@@ -1,3 +1,4 @@
+
 <div class="row">
   <div class="col-md-2"></div>
   <div class="col-md-8">
@@ -14,11 +15,21 @@
                 <th>Status</th>
                 <th>Start Date</th>
                 <th>End Date</th>
+                <th>Action</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-
+              <tr *ngFor="let item of listArr; let sr = index">
+                <td>{{sr+1}}</td>
+                <td>{{item.Name}}</td>
+                <td>{{item.Description}}</td>
+                <td>{{item.Status}}</td>
+                <td>{{item.Start_Date}}</td>
+                <td>{{item.End_Date}}</td>
+                <td>
+                  <span class="glyphicon glyphicon-pencil"></span>
+                  <span class="glyphicon glyphicon-remove-sign" ></span>
+                </td>
               </tr>
             </tbody>
           </table>
