--- a/src/app/list-items/list-items.component.html
+++ b/src/app/list-items/list-items.component.html
@@ -28,7 +28,7 @@
                 <td>{{item.End_Date}}</td>
                 <td>
                   <span class="glyphicon glyphicon-pencil"></span>
-                  <span class="glyphicon glyphicon-remove-sign" ></span>
+                  <span class="glyphicon glyphicon-remove-sign" style="margin-left: 5px" (click)="onDelete(item)" ></span>
                 </td>
               </tr>
             </tbody>
