--- a/src/app/add-items/add-items.component.html
+++ b/src/app/add-items/add-items.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-4"></div>
   <div class="col-md-4">
-    <h3>ToDO List</h3>
+    <h3>Add Task</h3>
     <div class="outer-div">
       <form #form="ngForm">
         <div class="row">
