--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<div class="container-fluid"><app-add-items/></div>
-<div class="container-fluid"><app-list-items/></div>
+<!--<div class="container-fluid"><app-add-items/></div>-->
+<!--<div class="container-fluid"><app-list-items/></div>-->
+<h1>Welcome to My ToDO List</h1>
+<!--<button class="btn btn-default btn-sm" routerLink="home">Home</button>-->
+<button class="btn btn-danger btn-sm" routerLink="add" style="margin-left: 5px">Add Items</button>
+<button class="btn btn-success btn-sm" routerLink="list" style="margin-left: 5px">List</button>
+<div class="container-fluid"><router-outlet/></div>
+
