--- a/src/app/add-items/add-items.component.html
+++ b/src/app/add-items/add-items.component.html
@@ -6,7 +6,7 @@
       <form #form="ngForm">
         <div class="row row-pad">
           <div class="col-md-4">
-            <label>Name {{taskObj.Name}}</label>
+            <label>Name</label>
           </div>
           <div class="col-md-8">
             <input type="text" required name="name" [(ngModel)]="taskObj.Name"  #fname="ngModel" class="form-control">
